--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,10 @@ a:hover{
 	text-decoration: none;
 	color: #F5003D;
 }
+.pagination .active > a{
+	background-color: #FF3366;
+	border-color: #FF3366;
+}
 .god{
 	min-height: 100%;
 	padding-bottom: 40px;
@@ -54,6 +58,9 @@ footer{
 	width:100%;
 	padding:20px 0;
 }
+.friends a:hover{
+	color:#fff;
+}
 .touchus{
 	margin-top:20px;
 	text-align:center;
@@ -84,7 +91,6 @@ footer{
 	height:100px;
 	width:50%;
 	margin: 0 auto;
-	background-size:contain;
 }
 
 .main{
